styles/style.css
@font-face {
    font-family: "Roboto";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Extra-Bold";
    src: url(../fonts/Roboto.ttf) format('truetype');
    font-weight: 800;
    font-style: normal;
}

@font-face {
    font-family: "Roboto-Light-Italic";
    src: url(../fonts/Roboto-Italic.ttf) format('truetype');
    font-weight: 300;
    font-style: italic;
}

* {
    font-family: "Roboto", sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration-line: none;
}

body {
    max-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.left_margin_wide {
    margin-left: 20vw;
}

.right_margin_wide {
    margin-right: 20vw;
}

.left_margin_narrow {
    margin-left: 10vw;
}

.right_margin_narrow {
    margin-right: 10vw;
}

header {
    height: 5vh;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: #1F2937;
}

main {
    height: 90vh;
    display: flex;
    flex-direction: column;
    align-content: space-between;
}

ol {
    list-style: none;
}

.section_one {
    min-height: 25%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.section_one div {
    flex: 1 1 0px;
    height: 75%;
}

.section_one img {
    max-height: 100%;
    max-width: 500px;
}

.section_two {
    min-height: 30%;
}

.section_two article {
    max-height: 75%;
}

.section_two menu {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.section_two h2 {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

menu img,
figcaption {
    max-width: 110px;
    border-radius: 10%;
    text-align: center;
    color: #1F2937
}

.section_three {
    min-height: 25%;
}

.section_three article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.author {
    text-align: right;
}

.section_four {
    min-height: 20%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

footer {
    height: 5vh;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.top_nav_list {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.cta-container {
    flex: 1 1 0px;
    border-radius: 8px;
}

.cta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
}

.sign-up {
    border: 2px solid;
    border-radius: 0.5rem;
    font-size: 1.125rem;
    cursor: pointer;
    min-width: 8rem;
    min-height: 2rem;
}

/*Text*/
.main_txt {
    font-size: 3rem;
}

.secondary_txt {
    font-size: 1.125rem;
}

.info_txt {
    font-size: 2.25rem;
}

.quote_txt {
    font-family: "Roboto-Light-Italic", sans-serif;
    font-size: 2.25rem;
}

.header_logo {
    font-size: 1.5rem;
}

/* Colors */
.main-bg-color {
    background-color: #1F2937;
}

.main-txt-color {
    color: #F9FAF8;
}

.secondary-txt-color {
    color: #E5E7EB;
}

.quote-bg {
    background-color: #E5E7EB;
}

.quote-txt-color {
    color: #1F2937;
}

.cta-bg-color {
    background-color: #3882F6;
}

.cta-btn-border-color {
    border-color: #F9FAF8;
}

.cta-btn-no-border-color {
    border-color: #3882F6;
}

/* Debug */
/*
section {
    border: 1px solid black;
}

div {
    border: 1px solid black;
}
*/

